index.css
body {
    margin: 0;
    padding: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background-color: #000000;
    color: #ffffff;
    height: 100vh;
    width: 100vw;
}

.author-info {
    position: absolute;
    bottom: 10px;
    right: 10px;
    font-size: 12px;
    color: #888888;
    text-align: right;
}

.stats{
    position: absolute;
    top: 10px;
    right: 10px;
    font-size: 16px;
    color: #ffffff;
    display: flex;
    flex-direction: column;
}

